# luminate

./: .env.example  .gitignore  CLAUDE.md  Makefile  drizzle.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
backend/: .env.example  LLM_MODELS.md  MULTI_PROVIDER.md  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  init.py  llm.py  projects.py  settings.py
backend/app/core/: database.py
backend/app/llm/: __init__.py  anthropic_client.py  llm_client.py  prompts.py
backend/app/models/: __init__.py  analysis.py  content.py  project.py  recording.py  research.py  script.py  setting.py  slide.py  video.py
backend/app/schemas/: __init__.py  analysis.py  content.py  project.py  recording.py  research.py  script.py  setting.py  slide.py  video.py
backend/tests/: test_api.py  test_llm.py
docs/: runtime-boundary.md
drizzle/: 0000_volatile_cloak.sql  0001_add_transcript_diff.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src/__tests__/: setup.ts
src/__tests__/api/: outline.test.ts  projects.test.ts  recordings.test.ts  runtime-boundary.test.ts  settings-verify.test.ts  sources-claims.test.ts
src/__tests__/components/: outline-editor.test.tsx  step-navigation.test.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/hooks/: useLLM.ts
src/lib/: debug.ts  readiness.ts  utils.ts
src/lib/clips/: ass.ts  (+2 more)
src/stores/: project-store.ts  settings-store.ts  workflow-store.ts
(+117 files in other folders)
