[tool.poetry]
name = "luminate-backend"
version = "0.1.0"
description = "Python backend for Luminate YouTube video automation"
authors = ["Luminate Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
langchain = "^0.1.5"
langchain-anthropic = "^0.1.1"
langchain-openai = "^0.1.1"
langchain-google-genai = "^1.0.0"
langchain-core = "^0.1.5"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
sse-starlette = "^2.0.0"
aiofiles = "^23.2.1"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[tool.poetry.scripts]
luminate = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
